# mimoe-edge-security-copilot

./: .env.example  README.md  pyproject.toml
data/: access_logs.json  alarm_logs.json  camera_observations.json  door_events.json  security_policy.txt
src/security_agent/: main.py
src/security_agent/application/: generate_report.py  ports.py  prompt_builder.py  semantic_retriever.py
src/security_agent/domain/: ports.py  similarity.py
src/security_agent/infrastructure/: file_security_repository.py  mimoe_embedding_client.py  mimoe_llm_client.py
tests/: test_file_security_repository.py  test_generate_report.py  test_mimoe_embedding_client.py  test_mimoe_llm_client.py  test_prompt_builder.py  test_semantic_retriever.py  test_similarity.py
